; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_verbs.c_ipath_destroy_ah.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_verbs.c_ipath_destroy_ah.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_ah = type { i32 }
%struct.ipath_ibdev = type { i32, i32 }
%struct.ipath_ah = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ib_ah*)* @ipath_destroy_ah to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ipath_destroy_ah(%struct.ib_ah* %0) #0 {
  %2 = alloca %struct.ib_ah*, align 8
  %3 = alloca %struct.ipath_ibdev*, align 8
  %4 = alloca %struct.ipath_ah*, align 8
  %5 = alloca i64, align 8
  store %struct.ib_ah* %0, %struct.ib_ah** %2, align 8
  %6 = load %struct.ib_ah*, %struct.ib_ah** %2, align 8
  %7 = getelementptr inbounds %struct.ib_ah, %struct.ib_ah* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call %struct.ipath_ibdev* @to_idev(i32 %8)
  store %struct.ipath_ibdev* %9, %struct.ipath_ibdev** %3, align 8
  %10 = load %struct.ib_ah*, %struct.ib_ah** %2, align 8
  %11 = call %struct.ipath_ah* @to_iah(%struct.ib_ah* %10)
  store %struct.ipath_ah* %11, %struct.ipath_ah** %4, align 8
  %12 = load %struct.ipath_ibdev*, %struct.ipath_ibdev** %3, align 8
  %13 = getelementptr inbounds %struct.ipath_ibdev, %struct.ipath_ibdev* %12, i32 0, i32 0
  %14 = load i64, i64* %5, align 8
  %15 = call i32 @spin_lock_irqsave(i32* %13, i64 %14)
  %16 = load %struct.ipath_ibdev*, %struct.ipath_ibdev** %3, align 8
  %17 = getelementptr inbounds %struct.ipath_ibdev, %struct.ipath_ibdev* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = add nsw i32 %18, -1
  store i32 %19, i32* %17, align 4
  %20 = load %struct.ipath_ibdev*, %struct.ipath_ibdev** %3, align 8
  %21 = getelementptr inbounds %struct.ipath_ibdev, %struct.ipath_ibdev* %20, i32 0, i32 0
  %22 = load i64, i64* %5, align 8
  %23 = call i32 @spin_unlock_irqrestore(i32* %21, i64 %22)
  %24 = load %struct.ipath_ah*, %struct.ipath_ah** %4, align 8
  %25 = call i32 @kfree(%struct.ipath_ah* %24)
  ret i32 0
}

declare dso_local %struct.ipath_ibdev* @to_idev(i32) #1

declare dso_local %struct.ipath_ah* @to_iah(%struct.ib_ah*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @kfree(%struct.ipath_ah*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
